fixed text misalignment in icon-buttons

--- a/web/ui-elements/text-button.css
+++ b/web/ui-elements/text-button.css
@@ -6,7 +6,6 @@
 
     height: 32px;
     padding: 0 10px;
-    padding-left: 5px;
 
     color: #172b4d;
     background-color: #f1f2f4;
@@ -34,6 +33,7 @@
         justify-items: center;
     
         padding: 4px;
+        padding-left: 5px;
         padding-right: 5px;
     
         & span {
@@ -46,6 +46,10 @@
         padding: 0;
         padding-left: 5px;
     }
+}
+
+.text-button:has(.button-icon) {
+    padding-left: 0;
 }
 
 .text-button:hover {
